@@ -4,7 +4,7 @@ App::TimeTracker::Command::Gitlab - App::TimeTracker Gitlab plugin
 
 # VERSION
 
-version 1.003
+version 1.004
 
 # DESCRIPTION
 
@@ -64,11 +64,11 @@ If `--issue` is set and we can find an issue with this id in your current repo
 
 # AUTHOR
 
-Thomas Klausner <domm@cpan.org>
+Thomas Klausner <domm@plix.at>
 
 # COPYRIGHT AND LICENSE
 
-This software is copyright (c) 2016 by Thomas Klausner.
+This software is copyright (c) 2016 - 2021 by Thomas Klausner.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
