@@ -1,33 +1,8 @@
 name    = App-TimeTracker-Command-Gitlab
-author  = Thomas Klausner <domm@cpan.org>
+author  = Thomas Klausner <domm@plix.at>
 license = Perl_5
 copyright_holder = Thomas Klausner
-copyright_year   = 2016
+copyright_year   = 2016 - 2021
 
-[GatherDir]
-exclude_match = local
-exclude_match = cpanfile.snapshot
-[PruneCruft]
-[ManifestSkip]
-[MetaYAML]
-[MetaJSON]
-[License]
-[ReadmeAnyFromPod]
-type = markdown
-filename = README.md
-location = root
-[Repository]
-[AutoPrereqs]
-[MetaResources]
-homepage=http://timetracker.plix.at
-[CheckChangeLog]
-[Manifest]
-[CPANFile]
-[TestRelease]
-[ConfirmRelease]
-[VersionFromModule]
-[ModuleBuild]
-[PodWeaver]
-[InstallGuide]
-[@Git]
-
+[@Author::DOMM]
+homepage = http://timetracker.plix.at/
